--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,5 +1,11 @@
 // app global css in Sass form
 
+.bg-main
+  background-color: rgba(255, 235, 235, 0.8)
+
+.bg-card 
+  background-color: rgba(251, 246, 246, 1)
+
 .bg-fire
   background-color: rgba(255, 187, 187, 1)
   
